removing java 8+ features